Bug #3159
nfs: Server returns wrong access_mode with some ACCESS requests
Start date:
2012-09-05
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
Some flags setted in ACCESS request are cause of wrong returned access_mode
Updated by Daniil Lunev over 8 years ago
If we ask for ACCESS4_MODIFY or ACCESS4_EXTEND (but not both), in response server sets both these bits up, and access_mode, that client recieves, is wrong because it's not a subset of requested mode.
Updated by Daniil Lunev over 8 years ago
The following results in wrong access_mode bits returned by NFSv4 server:
- Client sends ACCESS request with ACCESS4_MODIFY flag or ACCESS request with ACCESS4_EXTEND flag
- Server returns both MODIFY and EXTEND bits set
Updated by Rich Lowe over 8 years ago
- Status changed from Feedback to Resolved
Resolved in r13825 commit:63b4afd261aa