3159 nfs: Server returns wrong access_mode with some ACCESS requests Reviewed by: Eric Schrock <eric.schrock@delphix.com> Approved by: Richard Lowe <richlowe@richlowe.net>